fix: added z-index in blocks

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,6 @@
   box-sizing: border-box;
 }
 
-
 body,
 .event-container {
   font-size: 14px;
@@ -17,7 +16,6 @@ body,
   width: 100%;
   background-color: #1d212b;
   color: white;
-
 }
 
 .event-container {
@@ -97,17 +95,17 @@ body,
   display: none;
 }
 
-.user-input{
+.user-input {
   min-width: 400px;
   padding: 0 2%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  background-color:#343434;
+  background-color: #343434;
   width: 30%;
   height: 15vh;
-  min-height:80px ;
+  min-height: 80px;
 
   border-radius: 5px;
   text-align: center;
@@ -115,14 +113,14 @@ body,
   margin-bottom: 40px;
 }
 
-.limit-message{
-  display:block;
+.limit-message {
+  display: block;
   width: 450px;
   text-align: center;
   padding: 10px;
   height: 50px;
   font-size: 2rem;
-  background-color:#343434;
+  background-color: #343434;
   margin: 0 auto;
 }
 
@@ -130,7 +128,7 @@ body,
   width: 40%;
 }
 
-.user-button{
+.user-button {
   margin-right: 5px;
   display: flex;
   width: 20%;
@@ -187,6 +185,7 @@ body,
 }
 
 .description__info {
+  z-index: 1;
   max-width: 1200px;
   font-size: 40px;
   width: 100%;
@@ -428,9 +427,8 @@ body,
   animation: animateGlow 10s ease infinite;
 }
 
-
- /* Sound Module */
-.logo{
+/* Sound Module */
+.logo {
   min-width: 150px;
   height: 150px;
   margin-top: 35vh;
@@ -469,13 +467,13 @@ body,
   animation: animateGlow 10s ease infinite;
 }
 
-.sound{
+.sound {
   justify-content: center;
   width: 100%;
   background-color: #1e1e1e;
 }
 
-.audio{
+.audio {
   position: fixed;
   top: 350px;
 }
@@ -533,6 +531,7 @@ body,
 }
 
 .clicks {
+  z-index: 1;
   display: none;
   max-width: 400px;
   width: 100%;
@@ -544,6 +543,7 @@ body,
 }
 
 .timer-block {
+  z-index: 1;
   display: flex;
   align-items: center;
   text-align: center;
@@ -560,7 +560,6 @@ body,
 .timer {
   font-size: 60px;
 }
-
 
 /* Custom Message */
 
@@ -605,14 +604,13 @@ body,
 }
 
 .weather_icon {
-    width: 100px;
-    height: 102.67px;
+  width: 100px;
+  height: 102.67px;
 }
 
 .custom-message-container {
   display: flex;
 }
-
 
 /* Shape Module */
 
@@ -625,8 +623,12 @@ body,
 }
 
 @keyframes show {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .exmpl-svg {
